syntax = "proto3";

// protoc --go_out=plugins=grpc:. *.proto

package session;

message Cookie {
    string token = 1;
    string expiration = 2;
}

message UserID {
    string ID = 1;
}

message Nothing {}

service AuthChecker {
    rpc CreateSession (UserID) returns (Cookie) {}
    rpc DeleteSession (Cookie) returns (Nothing) {}
    rpc UpdateSession (Cookie) returns (Cookie) {}
    rpc GetIDFromSession (Cookie) returns (UserID) {}
}